# kelimepy

./: README.md  pyproject.toml  setup.py
src/kelimepy/: __init__.py  kelime.py
