[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kelimepy_huseyinaverbek"
version = "0.0.1"
authors = [
  { name="Hüseyin Averbek", email="huseyinaverbek@gmail.com" },
]
description = "Türkçe sözlükten bir kelimenin anlamını almak için bir paket"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hevirbek/kelimepy"
"Bug Tracker" = "https://github.com/hevirbek/kelimepy/issues"